--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "./blog" # the subpath of your site, e.g. /blog
 url: "http://Muthoimo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: Muthoimo
 github_username:  Muthoimo
 
 # Build settings
-theme: minima
+theme: "devlopr-jekyll"
 plugins:
   - jekyll-feed
 
